Adicionado incrementos e correções

--- a/sections/4-solucao-desenvolvida.tex
+++ b/sections/4-solucao-desenvolvida.tex
@@ -35,7 +35,7 @@ No layout em linha, o componente \textit{TabBar.qml} será instanciado e posicio
 A visão a seguir, apresenta um diagrama de pacotes e arquivos destacando uma visão lógica dos principais elementos da arquitetura e logo a seguir, é descrito o papel e o conteúdo de cada um deles.
 
 \begin{figure}[H]
-	\includegraphics[scale=0.55]{diagrama_geral_da_arquitetura}
+	\includegraphics[scale=0.5]{diagrama_geral_da_arquitetura}
 	\centering
 	\caption{Pacotes principais da arquitetura}
 \end{figure}
@@ -234,7 +234,7 @@ Esta seção descreverá o processo de comunicação e interação com o serviç
 ....
 
 
-\subsection{O Componente Basepage}\label{sec:solucao-desenvolvida}
+\subsection{O Componente BasePage}\label{sec:solucao-desenvolvida}
 ....
 
 
