Adicionado incrementos, correções e melhorias

--- a/sections/3-trabalhos-relacionados.tex
+++ b/sections/3-trabalhos-relacionados.tex
@@ -8,10 +8,10 @@
 % -----------------------------------------------------------
 
 \section{TRABALHOS RELACIONADOS}
-Nesta seção, serão detalhados os trabalhos relacionados com este projeto. O detalhamento será feito com uma descrição geral do trabalho desenvolvido e como ele se relaciona com este projeto. Será considerado também os pontos fracos e fortes identificados exibidos em uma simples tabela.\par\par
+Nesta seção, serão detalhados os trabalhos relacionados com este projeto. O detalhamento será feito com uma descrição geral do trabalho desenvolvido e como ele se relaciona com este projeto. Será considerado também os pontos fracos e fortes identificados exibidos em uma simples tabela.
 
-\textbf{Uma Arquitetura de Referência para o Desenvolvimento de Sistemas Colaborativos Móveis Baseados em Componentes}\par
-A arquitetura de referência proposta, denominada CReAMA – \textit{Component-Based Reference Architecture for Collaborative Mobile Applications}, teve como principal objetivo orientar o desenvolvimento de sistemas colaborativos móveis baseados em componentes para a plataforma Android. Sistemas desenvolvidos de acordo com essa arquitetura, devem dar suporte ao desenvolvimento de componentes e à criação de aplicações colaborativas por meio da composição desses componentes. As aplicações e componentes são desenvolvidos para plataformas móveis, facilitando o uso de recursos inerentes a essas plataformas, tais como informações de sensores embarcados. Com base na arquitetura de referência, o desenvolvedor poderá ser guiado para criar componentes e compor novas aplicações seguindo os padrões estabelecidos. Por exemplo, será possível construir \textit{toolkits} que forneçam componentes para um domínio específico. É importante ressaltar que a arquitetura foi definida considerando-se: aspectos da plataforma móvel, de sistemas colaborativos e da própria orientação a componentes. Com relação à plataforma móvel, optou-se por uma plataforma específica, visando-se a definição de uma arquitetura otimizada para as características da respectiva plataforma. A arquitetura proposta dará suporte ao desenvolvimento de novos sistemas baseados em componentes, considerando também aspectos relativos à comunicação com a Web.\par
+\textbf{Arquitetura de Referência para o Desenvolvimento de Sistemas Colaborativos Móveis Baseados em Componentes}\par
+A arquitetura de referência proposta, denominada CReAMA – \textit{Component-Based Reference Architecture for Collaborative Mobile Applications}, teve como principal objetivo orientar o desenvolvimento de sistemas colaborativos móveis baseados em componentes para a plataforma Android. Sistemas desenvolvidos de acordo com essa arquitetura, devem dar suporte ao desenvolvimento de componentes e à criação de aplicações colaborativas por meio da composição desses componentes. As aplicações e componentes são desenvolvidos para plataformas móveis, facilitando o uso de recursos inerentes a essas plataformas, tais como informações de sensores embarcados. Com base na arquitetura de referência, o desenvolvedor poderá ser guiado para criar componentes e compor novas aplicações seguindo os padrões estabelecidos. Por exemplo, será possível construir \textit{toolkits} que forneçam componentes para um domínio específico. É importante ressaltar que a arquitetura foi definida considerando-se: aspectos da plataforma móvel, de sistemas colaborativos e da própria orientação a componentes. Com relação à plataforma móvel, optou-se por uma plataforma específica, visando-se a definição de uma arquitetura otimizada para as características da respectiva plataforma. A arquitetura proposta dará suporte ao desenvolvimento de novos sistemas baseados em componentes, considerando também aspectos relativos à comunicação com a Web.
 
 O trabalho proposto por Maison Melotti se relaciona com este trabalho pelo fato de terem objetivos semelhantes, que é propor uma arquitetura para facilitar o desenvolvimento de aplicativos móveis, permitindo o reuso facilitado de componentes. Apesar de estarem focados em domínio específico, os trabalhos se relacionam no atendimento de dois requisitos funcionais, que são eles cache de dados, notificações do sistema (local e \textit{push notification}), acesso a rede (requisições HTTP) e o provimento de componentes reutilizáveis pelas aplicações baseadas na arquitetura proposta.
 
@@ -54,3 +54,8 @@ A relação deste trabalho com a arquitetura porposta em MoCA pode ser entendida
 
 
 %artigo 3%
+\textbf{Uma Arquitetura de Referência para Sistemas de Informação e Portais de Serviços de Governo Eletrônico}\par
+A proposta dessa arquitetura objetiva solucionar os problemas de padronização, integração e gerenciamento das informações inerentes aos sistemas de informação dos órgãos públicos, a fim de reduzir custos e aumentar a qualidade dos sistemas governamentais. Para isso, foi desenvolvido uma arquitetura de referência para os sistemas de informação e portais de serviços do governo. A arquitetura proposta visa atender aos requisitos de projetos em sistemas de informação que possam ser representados em aplicações tanto em ambiente Web quanto para o ambiente Desktop offline. O modelo arquitetural proposto foi empregado no contexto das aplicações offline da Plataforma Lattes, a saber: o Sistema de Currículo Lattes e o Sistema de Grupos de Pesquisas. Dentre os requisitos não funcionais atendidos pela arquitetura proposta, destaca-se: Mesmo método de desenvolvimento de aplicações para as aplicações Web e Desktop; Consumo minimalista dos recursos; Alto grau de independência de tecnologias de terceiros e Crescimento dinâmico de funcionalidades através de plugins. A arquitetura impõe uma restrição: o uso do padrão MVC, pois fornece módulos abstratos para as camadas de dados, comunicação e visualização o qual deve ser utilizados para criar uma instância da arquitetura e ser aplicada em um novo sistema construído acima dessa arquitetura.
+
+
+%artigo 5%
